package com.example.task__5;

public interface Aggregate {
    Iterator getIterator();
    int getImageCount();
}